--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "jquery": "^3.6.4",
     "popper.js": "^1.16.1",
     "sass": "^1.61.0",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "build:css": "sass ./app/assets/stylesheets/application.bootstrap.scss ./app/assets/builds/application.css --no-source-map --load-path=node_modules"
